--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-dom": "^18.3.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.26.1",
-    "react-toastify": "^10.0.5"
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
